# celery-typed-tasks

./: .gitignore  .readthedocs.yaml  .tool-versions  404.html  LICENSE  Makefile  README.md  example.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: bump.yml  ci.yml  docs.yml  publish.yml
celery_typed_tasks/: __init__.py  _version.py  core.py
docs/: example.md  index.md  requirements.txt  usage.md
example/: index.html
search/: search_index.json
tests/: conftest.py  test_core.py  test_custom_serialization.py
usage/: index.html
